// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar navigation characterisation > company admin navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "aiRegister -> /app/governance/register",
    "askPlatform -> /app/assistant",
    "auditTrail -> /app/governance/audit-trail",
    "authDiagnostics -> /app/settings/auth-diagnostics",
    "billing -> /app/settings/billing",
    "calls -> /app/calls",
    "dashboard -> /app",
    "dashboard -> /app/settings",
    "governanceOverview -> /app/governance",
    "policiesInForce -> /app/governance/policies",
    "reception -> /app/reception",
    "sites -> /app/sites",
    "tasks -> /app/tasks",
    "teamMembers -> /app/settings/team",
  ],
  "sections": [
    "governance",
    "organization",
  ],
}
`;

exports[`sidebar navigation characterisation > signed-out navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "askPlatform -> /app/assistant",
    "dashboard -> /app",
    "sites -> /app/sites",
  ],
  "sections": [],
}
`;

exports[`sidebar navigation characterisation > standard user navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "askPlatform -> /app/assistant",
    "calls -> /app/calls",
    "dashboard -> /app",
    "reception -> /app/reception",
    "sites -> /app/sites",
    "tasks -> /app/tasks",
  ],
  "sections": [],
}
`;

exports[`sidebar navigation characterisation > super admin navigation is unchanged 1`] = `
{
  "links": [
    "Hakken -> /",
    "aiRegister -> /admin/governance/register",
    "allUsers -> /admin/directory",
    "allWebsites -> /admin/websites",
    "analytics -> /admin/settings/analytics",
    "apiKeys -> /admin/settings/api-keys",
    "auditTrail -> /admin/governance/audit-trail",
    "authDiagnostics -> /admin/auth-diagnostics",
    "billing -> /admin/settings/billing",
    "connections -> /admin/connections",
    "dashboard -> /admin",
    "governanceApprovals -> /admin/governance/approvals",
    "governanceOverview -> /admin/governance",
    "health -> /admin/health",
    "invitations -> /admin/super-admins/invite",
    "manageAgents -> /admin/agents",
    "manageCompanies -> /admin/companies",
    "manageGlobalAi -> /admin/ai",
    "manageWorkflows -> /admin/workflows",
    "plans -> /admin/settings/plans",
    "policiesInForce -> /admin/governance/policies",
    "schedules -> /admin/workflows/schedules",
    "scripts -> /admin/settings/scripts",
    "seoCollection -> /admin/websites/collection",
    "seoCosts -> /admin/websites/costs",
    "systemAdmins -> /admin/super-admins",
    "systemSettings -> /admin/settings",
    "toolServers -> /admin/ai/tool-servers",
    "tools -> /admin/ai/tools",
    "workflowRuns -> /admin/workflows/executions",
  ],
  "sections": [
    "agents",
    "ai",
    "companies",
    "governance",
    "maintenance",
    "settings",
    "userManagement",
    "websites",
  ],
}
`;
